--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@ description: The C++ Alliance is dedicated to helping the C++ programming langua
       </div>
 
       <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/nejati'>
+        <a class='card' href='{{ site.baseurl }}/people/mohammad'>
           <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/nejati.jpg' alt='Mohammad Nejati'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/mohammad.jpg' alt='Mohammad Nejati'>
           </div>
           <span class='card-text'>
             <h4 class='text-m card-title'><center>Mohammad Nejati<center></h4>
