--- a/people/mohammad.html
+++ b/people/mohammad.html
@@ -2,11 +2,11 @@
 layout: team
 nav-class: dark
 member-name: Mohammad Nejati
-id: nejati
+id: mohammad
 title: Mohammad Nejati | The C++ Alliance
 position: Staff Engineer
 github: https://github.com/ashtum
 linkedin: https://www.linkedin.com/in/ashtum/
-image: /images/people/nejati.jpg
+image: /images/people/mohammad.jpg
 ---
 <p>Mohammad is a professional software engineer with eight years of experience. His interests are asynchronous programming and structured concurrency in C++, and he is obsessed with finding high-performance solutions with easy-to-use interfaces.  He is the author of various open-source libraries, mostly related to asynchronous programming and based on Boost.Asio</p>
