Made info@ a mailto link

--- a/index.html
+++ b/index.html
@@ -553,12 +553,12 @@ Braden Ganetsky<center></h4>
 
       <p class='text-xs'>Contact Information</p>
       
-      <p class='text-xxs'>Donors with questions or who wish to discuss potential donations are encouraged to contact us info@cppalliance.org.</p>
+      <p class='text-xxs'>Donors with questions or who wish to discuss potential donations are encouraged to contact us <a href='mailto:{{ 'info@cppalliance.org' | encode_email }}'>info@cppalliance.org</a>.</p>
 
     </div>
 
   </section>
-  
+
 </div>
 
 {% include contact.html %}
