--- a/index.html
+++ b/index.html
@@ -325,23 +325,6 @@ ecosystem of open source libraries and as a growing community of those who contr
       </div>
 
 
-
-      <div class='col-third'>
-        <a class='card' href='{{ site.baseurl }}/people/braden'>
-          <div class='card-img-wrapper'>
-            <img class='card-img' src='{{ site.baseurl }}/images/people/braden.jpg' alt='Braden Ganetsky'>
-          </div>
-          <span class='card-text'>
-            <h4 class='text-m card-title'>
-              <center>
-                Braden Ganetsky<center>
-            </h4>
-            <h5 class='text-xs card-subtitle'>Contributor</h5>
-          </span>
-        </a>
-      </div>
-
-
       <div class='col-third'>
         <a class='card' href='{{ site.baseurl }}/people/kenneth'>
           <div class='card-img-wrapper'>
@@ -353,6 +336,22 @@ ecosystem of open source libraries and as a growing community of those who contr
                 Kenneth Reitz<center>
             </h4>
             <h5 class='text-xs card-subtitle'>Staff Engineer</h5>
+          </span>
+        </a>
+      </div>
+
+
+      <div class='col-third'>
+        <a class='card' href='{{ site.baseurl }}/people/braden'>
+          <div class='card-img-wrapper'>
+            <img class='card-img' src='{{ site.baseurl }}/images/people/braden.jpg' alt='Braden Ganetsky'>
+          </div>
+          <span class='card-text'>
+            <h4 class='text-m card-title'>
+              <center>
+                Braden Ganetsky<center>
+            </h4>
+            <h5 class='text-xs card-subtitle'>Junior Staff Engineer</h5>
           </span>
         </a>
       </div>
