--- a/people/braden.html
+++ b/people/braden.html
@@ -4,9 +4,12 @@ nav-class: dark
 member-name: Braden Ganetsky
 id: braden
 title: Braden Ganetsky | The C++ Alliance
-position: Contributor
+position: Junior Staff Engineer
 linkedin: https://www.linkedin.com/in/braden-ganetsky/
 github: https://github.com/k3DW
 image: /images/people/braden.jpg
 ---
-<p>Braden graduated with a degree in mechanical engineering, but soon pivoted to software after he spent way too much of his free time writing C++. Now he can do it for work *and* in his free time! Braden spends his days working on supply chain software, and spends his nights working on parser combinators and getting involved in the C++ community.</p>
+<p>Braden graduated with a degree in mechanical engineering, but soon pivoted to software after he spent way too much of
+    his free time writing C++. Now he can do it for work *and* in his free time! Braden spends his days working on
+    supply chain software, and spends his nights working on parser combinators and getting involved in the C++
+    community.</p>
