fix auto cleanups from vs code plugin

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 title: The C++ Alliance
 nav-class: transparent
-description: The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an
-ecosystem of open source libraries and as a growing community of those who contribute to those libraries.
+description: The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries.
 ---
 
 {% include top-title.html header="The C++ Alliance" subheader='Empowering C++' %}
